code/SampleProgramToInterface/src/main/java/com/sample/good/AInterface.java
package com.sample.good;

public interface AInterface {
    int doXWork();

    int doYWork();

    int doZWork();
}
