code/SampleProgramToInterface/src/main/java/com/sample/bad/GodClassCaller.java
package com.sample.bad;

public class GodClassCaller {

    public GodClassCaller() {
    }
}
